--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 poke-api.url=https://pokeapi.co
+
+management.endpoint.health.show-details=ALWAYS
+management.endpoints.web.exposure.include=*
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_pitfalls?useSSL=false&autosave=conservative
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
