Implementing the StateController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 poke-api.url=https://pokeapi.co
+servico-dados-ibge.url=https://servicodados.ibge.gov.br
 
 management.endpoint.health.show-details=ALWAYS
 management.endpoints.web.exposure.include=*
