Implementing the BankController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 poke-api.url=https://pokeapi.co
 servico-dados-ibge.url=https://servicodados.ibge.gov.br
+brasil-api.url=https://brasilapi.com.br
 
 management.endpoint.health.show-details=ALWAYS
 management.endpoints.web.exposure.include=*
