--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,6 @@
 poke-api.url=http://localhost:${wiremock.server.port}
+servico-dados-ibge.url=http://localhost:${wiremock.server.port}
+brasil-api.url=http://localhost:${wiremock.server.port}
 wiremock.reset-mappings-after-each-test=true
 
 spring.datasource.url=jdbc:h2:mem:testdb
